k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: devops.local
      http:
        paths:
          # FRONTEND
          - path: /()
            pathType: Prefix
            backend:
              service:
                name: frontend-angular
                port:
                  number: 80

          # KEYCLOAK (rewrite)
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

          # BACKEND API
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  number: 8080
